@startuml
Title Domænemodel

hide circle
hide methods

class Sælger {
    medarbejder nummer
    navn
    kodeord
}

class Carport {
    længde
    bredde
    tag
}

object Skur {
    position
    størrelse
}

class Kunde {
    navn
    address
    post nummer
    by
    tlf nummer
    email
}

class Bestilling {
    ordrenumer
    tidspunkt
    status
}

object Stykliste

class Materiale {
    varenummer
    navn
    styk/meter pris
}

class Styk {
    beskrivelse
    styk/meter
    pris
}

class Tilbud {
    dækningsgrad
    pris
}

Bestilling "1" -- "1" Carport
Carport "1" -- "0..1" Skur
Bestilling "*" -- "1" Kunde
Bestilling "1" -- "0..1" Stykliste
Sælger "0..1" -- "*" Bestilling
Stykliste "*" -- "1" Styk
Styk "1" -- "*" Materiale
Tilbud "0..1" -- "1" Bestilling





@enduml